src/css/_core.scss
// Root
:root {
  font-family: $font-stack-system-ui;
  font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
  font-size: percentage($ratio-text-root);
  line-height: $line-height-root;

  @media (min-width: $breakpoint-content) {
    font-size: percentage($ratio-text-root-content);
  }

  @media (min-width: $breakpoint-full) {
    font-size: percentage($ratio-text-root-full);
  }

  @media (min-width: 1921px) and (min-height: 1081px) {
    font-size: 1vw;
  }
}

// Sections
body {
  background-color: $color-bg;
  color: $color-fg;
  margin: 0;
}

h1 {
  font-size: ($ratio-text-h1 * 1rem);
  font-weight: 400;
  line-height: $line-height-h1;
  margin: $margin-top-h1 0 $margin;

  a {
    text-decoration: none;
  }
}

// Grouping Content
p {
  hyphens: auto;
  margin: 0 0 $margin;
  text-align: justify;
  text-justify: inter-cluster;
}

hr {
  background-color: transparent;
  border: 0;
  box-sizing: content-box;
  clear: both;
  color: $color-fg-light;
  font-size: ($ratio-text-tiny * 1rem);
  height: 1em;
  line-height: 1;
  margin: $margin-large 0;
  text-align: center;

  &::before {
    content: "✖ ✖ ✖";
  }
}

pre {
  $r: $ratio-text-small;

  clear: both;
  font-family: $font-stack-monospace;
  font-feature-settings: "zero" 1;
  font-size: ($r * 1rem);
  line-height: ($line-height-root * 2 / 3 / $r);
  margin: 0 0 $margin;
  overflow: auto;

  @media (min-width: $breakpoint-content) {
    overflow: visible;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    word-wrap: break-word;
  }
}

blockquote {
  border-left: $width-border-blockquote solid $color-border-blockquote;
  color: $color-fg-light;
  margin: 0 0 $margin;
  padding-left: $padding-left-blockquote;

  figure > &,
  > :last-child {
    margin-bottom: 0;
  }

  @media (min-width: $breakpoint-content) {
    margin-left: $margin-left-blockquote-content;
  }
}

ul,
ol {
  margin: 0 0 $margin;
  padding-left: $padding-left-list;

  ul,
  ol {
    margin-bottom: 0;
  }

  @media (min-width: $breakpoint-content) {
    padding-left: 0;

    ul,
    ol {
      padding-left: $padding-left-list;
    }
  }
}

dl {
  margin: 0 0 $margin;

  dl {
    margin-bottom: 0;
  }
}

dt {
  color: $color-fg-light;
  font-weight: 700;
  margin-bottom: $margin-tiny;
}

dd {
  margin-bottom: $margin-tiny;
  margin-left: $indent;
}

figure {
  margin: 0 0 $margin;
  position: relative;
}

figcaption {
  color: $color-fg-light;
  font-size: ($ratio-text-small * 1rem);
  margin-top: $margin-tiny;

  blockquote + & {
    border-left: $width-border-blockquote solid $color-border-blockquote;
    font-size: inherit;
    margin-top: 0;
    padding-left: $padding-left-blockquote;
    padding-top: $margin;
  }

  @media (min-width: $breakpoint-content) {
    blockquote + & {
      margin-left: $margin-left-blockquote-content;
    }
  }

  @media (min-width: $breakpoint-full) {
    bottom: 0;
    margin-right: $width-gap;
    position: absolute;
    right: 100%;
    width: $width-supplement;
    z-index: 1;

    blockquote + & {
      position: static;
      width: auto;
    }
  }
}

main {
  display: block;
}

// Text-level Semantics
a {
  color: $color-accent;
  -webkit-text-decoration-skip: ink;
  text-decoration-skip: ink;

  &:visited {
    color: $color-accent-dark;
  }
}

em {
  font-style: normal;
  font-weight: 700;
}

strong {
  font-size: ($ratio-text-small * 1rem);
  -webkit-text-emphasis-style: dot;
  text-emphasis-style: dot;
}

cite {
  font-style: normal;
}

abbr {
  cursor: help;
  letter-spacing: $width-border-small;
}

code,
var,
samp,
kbd {
  font-family: $font-stack-monospace;
  font-feature-settings: "zero" 1;
  font-size: 1em;
  word-break: break-all;
}

var {
  font-style: normal;
}

mark {
  color: inherit;
}

// Edits
ins {
  text-decoration: none;
}

del {
  text-decoration: line-through;
}

// Embedded Content
img,
video {
  border: 0;
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  max-width: 100%;

  figure & {
    background-color: $color-bg-light;
    vertical-align: bottom;
  }
}

// Tabular Data
table {
  border-bottom: $width-border-table solid $color-border-table;
  border-collapse: collapse;
  border-spacing: 0;
  clear: both;
  display: inline-block;
  font-feature-settings: "tnum" 1;
  margin: 0 0 $margin;
  max-width: 100%;
  overflow-x: auto;
  table-layout: fixed;

  figure > & {
    margin-bottom: 0;
  }

  @media not screen {
    display: table;
  }
}

%table-cell,
td {
  border-top: $width-border-table solid $color-border-table;
  padding: $padding-large;
  vertical-align: top;
  white-space: nowrap;
}

th {
  @extend %table-cell;

  text-align: inherit;

  thead & {
    border-bottom: $width-border solid $color-border-table;
  }
}

// Forms
form {
  margin: 0 0 $margin;
}

:-ms-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

:placeholder-shown {
  opacity: 0.54;
}

// SVG
svg:not(:root) {
  overflow: hidden;
}

